# echinus

./: .gitignore  .indent.pro  COMPLIANCE  LICENSE  Makefile  Makefile.am  README  TODO  autogen.sh  config.def.h  config.h  config.mk  configure.template  dot_echinusrc_def  dot_fwmrc  dot_fwmrc_def  draw.c  echinus.1  echinus.c  echinus.h  echinusrc  ewmh.c  ewmh.h  fwm.1  fwm.c  iconify.xbm  inf.c  keys.h  lsw.c  max.xbm  parse.c  parse.h  rules.h  setfocus.c
debian/: changelog  control  copyright  menu  rules  watch
tests/: Makefile  Makefile.am  config.mk  ewmhpanel.c  util.c  util.h
